--- a/app/src/main/resources/fxml/auth/login_panel.fxml
+++ b/app/src/main/resources/fxml/auth/login_panel.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.geometry.Pos?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gameaffinity.view.LoginPanelController">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gameaffinity.view.LoginPanelView">
     <children>
         <GridPane alignment="CENTER" hgap="10" vgap="10">
             <children>
@@ -16,10 +16,10 @@
                 <PasswordField fx:id="passwordField" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
 
                 <!-- Login Button -->
-                <Button fx:id="loginButton" text="Login" onAction="#handleLogin" GridPane.rowIndex="2" GridPane.columnIndex="0" GridPane.columnSpan="2"/>
+                <Button fx:id="loginButton" text="Login" GridPane.rowIndex="2" GridPane.columnIndex="0" GridPane.columnSpan="2"/>
 
                 <!-- Register Button -->
-                <Button fx:id="registerButton" text="Create Account" onAction="#handleRegister" GridPane.rowIndex="3" GridPane.columnIndex="0" GridPane.columnSpan="2"/>
+                <Button fx:id="registerButton" text="Create Account" GridPane.rowIndex="3" GridPane.columnIndex="0" GridPane.columnSpan="2"/>
             </children>
         </GridPane>
     </children>
