--- a/app/src/main/resources/fxml/auth/register_panel.fxml
+++ b/app/src/main/resources/fxml/auth/register_panel.fxml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
 <GridPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20"
-          fx:controller="com.leveltrack.controller.RegisterPanelController"
-          hgap="10" vgap="10" alignment="CENTER" padding="20">
+          fx:controller="com.gameaffinity.view.RegisterPanelView"
+          hgap="10" vgap="10" alignment="CENTER">
+
+    <padding>
+        <Insets top="20" right="20" bottom="20" left="20"/>
+    </padding>
     
     <!-- Fila 1: Etiqueta y campo de texto para el nombre -->
     <Label text="Name:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
