--- a/app/src/main/resources/fxml/gameDatabase/game_database_view.fxml
+++ b/app/src/main/resources/fxml/gameDatabase/game_database_view.fxml
@@ -4,7 +4,7 @@
 <?import javafx.geometry.Pos?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.leveltrack.view.GameDatabaseController">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.leveltrack.view.GameDatabaseView">
     <children>
         <!-- Database Panel -->
         <VBox alignment="TOP_CENTER" spacing="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.topAnchor="10">
