--- a/app/src/main/resources/fxml/user/user_dashboard.fxml
+++ b/app/src/main/resources/fxml/user/user_dashboard.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.VBox?>
 
 <VBox xmlns:fx="http://javafx.com/fxml" 
-      fx:controller="com.leveltrack.controller.UserDashboardController"
+      fx:controller="com.leveltrack.controller.UserDashboardView"
       spacing="10" alignment="CENTER">
     <VBox.padding>
         <Insets top="20" right="20" bottom="20" left="20"/>
