--- a/app/bin/main/fxml/admin/admin_dashboard.fxml
+++ b/app/bin/main/fxml/admin/admin_dashboard.fxml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="com.leveltrack.controller.AdminDashboardController">
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.control.Button?>
+
+<BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="com.gameaffinity.view.AdminDashboardView">
     <!-- Parte superior con los botones principales -->
     <top>
         <HBox spacing="10" alignment="CENTER">
-            <Button fx:id="manageUsersButton" text="Manage Users" onAction="#handleManageUsers" />
-            <Button fx:id="manageGamesButton" text="Manage Games" onAction="#handleManageGames" />
+            <Button fx:id="manageUsersButton" text="Manage Users" />
+            <Button fx:id="manageGamesButton" text="Manage Games" />
         </HBox>
     </top>
 
     <!-- Parte inferior con el botón de logout -->
     <bottom>
         <HBox alignment="CENTER" spacing="10">
-            <Button fx:id="logoutButton" text="Logout" onAction="#handleLogout" />
+            <Button fx:id="logoutButton" text="Logout" />
         </HBox>
     </bottom>
 
