--- a/app/src/main/resources/fxml/admin/admin_dashboard.fxml
+++ b/app/src/main/resources/fxml/admin/admin_dashboard.fxml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="com.leveltrack.controller.AdminDashboardView">
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.control.Button?>
+
+<BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="com.gameaffinity.view.AdminDashboardView">
     <!-- Parte superior con los botones principales -->
     <top>
         <HBox spacing="10" alignment="CENTER">
