--- a/app/src/main/resources/fxml/admin/user_management.fxml
+++ b/app/src/main/resources/fxml/admin/user_management.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 
-<BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="com.leveltrack.controller.UserManagementView">
+<BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="com.gameaffinity.view.UserManagementView">
     <center>
         <TableView fx:id="userTable">
             <columns>
