--- a/app/src/main/resources/fxml/auth/login_panel.fxml
+++ b/app/src/main/resources/fxml/auth/login_panel.fxml
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.layout.*?>
+
 <?import javafx.scene.control.*?>
-<?import javafx.geometry.Pos?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gameaffinity.view.LoginPanelView">
+<AnchorPane prefHeight="171.0" prefWidth="271.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gameaffinity.view.LoginPanelView">
     <children>
-        <GridPane alignment="CENTER" hgap="10" vgap="10">
-            <children>
-                <!-- Email Field -->
-                <Label text="Email:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-                <TextField fx:id="emailField" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+          <!-- Email Field -->
+          <Label layoutX="41.0" layoutY="34.0" text="Email:" />
+          <TextField fx:id="emailField" layoutX="91.0" layoutY="71.0" />
 
-                <!-- Password Field -->
-                <Label text="Password:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-                <PasswordField fx:id="passwordField" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+          <!-- Password Field -->
+          <Label layoutX="31.0" layoutY="75.0" text="Password:" />
+          <PasswordField fx:id="passwordField" layoutX="91.0" layoutY="30.0" />
 
-                <!-- Login Button -->
-                <Button fx:id="loginButton" text="Login" GridPane.rowIndex="2" GridPane.columnIndex="0" GridPane.columnSpan="2"/>
+          <!-- Login Button -->
+          <Button fx:id="loginButton" layoutX="44.0" layoutY="116.0" prefHeight="25.0" prefWidth="80.0" text="Login" />
 
-                <!-- Register Button -->
-                <Button fx:id="registerButton" text="Create Account" GridPane.rowIndex="3" GridPane.columnIndex="0" GridPane.columnSpan="2"/>
-            </children>
-        </GridPane>
+          <!-- Register Button -->
+          <Button fx:id="registerButton" alignment="CENTER" contentDisplay="CENTER" layoutX="146.0" layoutY="116.0" prefHeight="25.0" prefWidth="80.0" text="Register" />
     </children>
 </AnchorPane>
