--- a/app/src/main/resources/fxml/auth/register_panel.fxml
+++ b/app/src/main/resources/fxml/auth/register_panel.fxml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.geometry.Insets?>
+
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20"
-          fx:controller="com.gameaffinity.view.RegisterPanelView"
-          hgap="10" vgap="10" alignment="CENTER">
+<AnchorPane prefHeight="198.0" prefWidth="267.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gameaffinity.view.RegisterPanelView">
 
     <padding>
-        <Insets top="20" right="20" bottom="20" left="20"/>
+        <Insets bottom="20.0" left="20.0" right="20.0" />
     </padding>
-    
+
     <!-- Fila 1: Etiqueta y campo de texto para el nombre -->
-    <Label text="Name:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-    <TextField fx:id="nameField" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
-    
+    <Label layoutX="46.0" layoutY="32.0" text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+    <TextField fx:id="nameField" layoutX="117.0" layoutY="32.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+
     <!-- Fila 2: Etiqueta y campo de texto para el correo -->
-    <Label text="Email:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-    <TextField fx:id="emailField" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
-    
+    <Label layoutX="47.0" layoutY="72.0" text="Email:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+    <TextField fx:id="emailField" layoutX="117.0" layoutY="72.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+
     <!-- Fila 3: Etiqueta y campo de texto para la contraseña -->
-    <Label text="Password:" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-    <PasswordField fx:id="passwordField" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
-    
+    <Label layoutX="37.0" layoutY="112.0" text="Password:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+    <PasswordField fx:id="passwordField" layoutX="117.0" layoutY="112.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+
     <!-- Fila 4: Botones para crear cuenta y volver -->
-    <Button text="Create Account" fx:id="createButton" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
-    <Button text="Back" fx:id="backButton" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
-</GridPane>
+    <Button fx:id="createButton" layoutX="53.0" layoutY="158.0" text="Create Account" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+    <Button fx:id="backButton" layoutX="182.0" layoutY="158.0" text="Back" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+   <Pane layoutX="50.0" layoutY="16.0" prefHeight="171.0" prefWidth="200.0" />
+</AnchorPane>
