--- a/app/src/main/resources/fxml/gameDatabase/game_database_view.fxml
+++ b/app/src/main/resources/fxml/gameDatabase/game_database_view.fxml
@@ -26,7 +26,7 @@
         <GridPane alignment="CENTER" hgap="10" vgap="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.topAnchor="350">
             <Label text="Search by Name:" />
             <TextField fx:id="searchField" GridPane.columnIndex="1" />
-            <Button text="Search" onAction="#handleSearchButtonClick" GridPane.columnIndex="2" />
+            <Button  fx:id="searchButton" text="Search" GridPane.columnIndex="2" />
 
             <Label text="Search by Genre:" GridPane.rowIndex="1"/>
             <ComboBox fx:id="genreComboBox" GridPane.columnIndex="1" GridPane.rowIndex="1">
@@ -36,13 +36,13 @@
                     </FXCollections>
                 </items>
             </ComboBox>
-            <Button text="Filter" onAction="#handleFilterButtonClick" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Button fx:id="filterButton" text="Filter" GridPane.columnIndex="2" GridPane.rowIndex="1" />
         </GridPane>
 
         <!-- Add Game Button -->
-        <Button text="Add to Library" onAction="#handleAddGameButtonClick" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.bottomAnchor="60" />
+        <Button fx:id="addGameButton" text="Add to Library" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.bottomAnchor="60" />
 
         <!-- Back Button -->
-        <Button text="Back" onAction="#handleBackButtonClick" AnchorPane.leftAnchor="10" AnchorPane.bottomAnchor="10" />
+        <Button fx:id="backButton" text="Back" AnchorPane.leftAnchor="10" AnchorPane.bottomAnchor="10" />
     </children>
 </AnchorPane>
