--- a/app/src/main/resources/fxml/admin/admin_dashboard.fxml
+++ b/app/src/main/resources/fxml/admin/admin_dashboard.fxml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-<BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="com.gameaffinity.view.AdminDashboardView">
-    <!-- Parte superior con los botones principales -->
-    <top>
-        <HBox spacing="10" alignment="CENTER">
-            <Button fx:id="manageUsersButton" text="Manage Users" />
-            <Button fx:id="manageGamesButton" text="Manage Games" />
-        </HBox>
-    </top>
+<BorderPane prefHeight="500.0" prefWidth="500.0" stylesheets="@../../css/admin/admin_dashboard.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gameaffinity.view.AdminDashboardView">
 
     <!-- Parte inferior con el botón de logout -->
     <bottom>
         <HBox alignment="CENTER" spacing="10">
-            <Button fx:id="logoutButton" text="Logout" />
+            <Button fx:id="logoutButton" text="Logout">
+                <cursor>
+                   <Cursor fx:constant="HAND" />
+                </cursor>
+            </Button>
         </HBox>
     </bottom>
 
@@ -25,4 +22,20 @@
     <center>
         <StackPane fx:id="mainContent" />
     </center>
+   <left>
+      <AnchorPane prefHeight="450.0" prefWidth="250.0" BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fx:id="userManagementImage" fitHeight="150.0" fitWidth="150.0" layoutX="50.0" layoutY="163.0" pickOnBounds="true" preserveRatio="true" />
+            <Label layoutX="87.0" layoutY="313.0" text="Manage Users" />
+         </children>
+      </AnchorPane>
+   </left>
+   <right>
+      <AnchorPane prefHeight="450.0" prefWidth="250.0" BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fx:id="gameManagementImage" fitHeight="150.0" fitWidth="150.0" layoutX="50.0" layoutY="163.0" pickOnBounds="true" preserveRatio="true" />
+            <Label layoutX="84.0" layoutY="313.0" text="Manage Games" />
+         </children>
+      </AnchorPane>
+   </right>
 </BorderPane>
