--- a/app/src/main/resources/fxml/auth/register_panel.fxml
+++ b/app/src/main/resources/fxml/auth/register_panel.fxml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="198.0" prefWidth="267.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gameaffinity.view.RegisterPanelView">
+<AnchorPane prefHeight="210.0" prefWidth="310.0" stylesheets="@../../css/auth/auth_panes.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gameaffinity.view.RegisterPanelView">
 
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" />
@@ -23,7 +24,12 @@
     <PasswordField fx:id="passwordField" layoutX="117.0" layoutY="112.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
     <!-- Fila 4: Botones para crear cuenta y volver -->
-    <Button fx:id="createButton" layoutX="53.0" layoutY="158.0" text="Create Account" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-    <Button fx:id="backButton" layoutX="182.0" layoutY="158.0" text="Back" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-   <Pane layoutX="50.0" layoutY="16.0" prefHeight="171.0" prefWidth="200.0" />
+    <Button fx:id="createButton" layoutX="53.0" layoutY="158.0" text="Create Account" GridPane.columnIndex="0" GridPane.rowIndex="3">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor></Button>
+    <Button fx:id="backButton" layoutX="182.0" layoutY="158.0" text="Back" GridPane.columnIndex="1" GridPane.rowIndex="3">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor></Button>
 </AnchorPane>
