--- a/app/src/main/resources/fxml/dialogs/game_form_dialog.fxml
+++ b/app/src/main/resources/fxml/dialogs/game_form_dialog.fxml
@@ -1,23 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<GridPane xmlns:fx="http://javafx.com/fxml" fx:controller="com.gameaffinity.view.GameFormView" hgap="10" vgap="10" >
+<GridPane alignment="CENTER" hgap="10" prefHeight="170.0" prefWidth="250.0" vgap="10" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gameaffinity.view.GameFormView">
     <padding>
-        <Insets top="20" right="20" bottom="20" left="20"/>
+        <Insets bottom="20" left="20" right="20" top="20" />
     </padding>
-    <Label text="Name:" GridPane.rowIndex="0" GridPane.columnIndex="0" />
-    <TextField fx:id="nameField" GridPane.rowIndex="0" GridPane.columnIndex="1" />
+    <Label text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+    <TextField fx:id="nameField" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-    <Label text="Genre:" GridPane.rowIndex="1" GridPane.columnIndex="0" />
-    <TextField fx:id="genreField" GridPane.rowIndex="1" GridPane.columnIndex="1" />
+    <Label text="Genre:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+    <TextField fx:id="genreField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-    <Label text="Price:" GridPane.rowIndex="2" GridPane.columnIndex="0" />
-    <TextField fx:id="priceField" GridPane.rowIndex="2" GridPane.columnIndex="1" />
+    <Label text="Price:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+    <TextField fx:id="priceField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-    <Button fx:id="saveButton" text="Save" GridPane.rowIndex="3" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
+    <Button fx:id="saveButton" text="Save" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor></Button>
+   <columnConstraints>
+      <ColumnConstraints />
+      <ColumnConstraints />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+   </rowConstraints>
 </GridPane>
