--- a/app/src/main/resources/fxml/friendship/friend_library_view.fxml
+++ b/app/src/main/resources/fxml/friendship/friend_library_view.fxml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.control.*?>
 
-<?import javafx.collections.FXCollections?>
-<?import java.lang.String?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gameaffinity.view.FriendLibraryView">
+<?import java.lang.*?>
+<?import javafx.collections.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+
+<AnchorPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gameaffinity.view.FriendLibraryView">
     <children>
         <VBox alignment="TOP_CENTER" spacing="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.topAnchor="10">
-            <HBox spacing="10" alignment="CENTER_LEFT">
+            <HBox alignment="CENTER" spacing="10">
                 <Label text="Search by Name: " />
                 <TextField fx:id="searchField" />
                 <Button fx:id="searchButton" text="Search" />
             </HBox>
-            <HBox spacing="10" alignment="CENTER_LEFT">
+            <HBox alignment="CENTER" spacing="10">
                 <Label text="Filter by Genre: " />
                 <ComboBox fx:id="genreComboBox">
                     <items>
@@ -25,14 +26,13 @@
             </HBox>
         </VBox>
 
-        <TableView fx:id="gamesTable" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.topAnchor="80" AnchorPane.bottomAnchor="60">
+        <TableView fx:id="gamesTable" editable="true" focusTraversable="false" layoutY="75.0" prefHeight="385.0" prefWidth="480.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.topAnchor="75.0">
             <columns>
-                <TableColumn fx:id="idColumn" text="ID" />
-                <TableColumn fx:id="nameColumn" text="Name" />
-                <TableColumn fx:id="genreColumn" text="Genre" />
-                <TableColumn fx:id="priceColumn" text="Price" />
-                <TableColumn fx:id="stateColumn" text="State" />
-                <TableColumn fx:id="scoreColumn" text="Score" />
+                <TableColumn fx:id="nameColumn" prefWidth="200.0" text="Name" />
+                <TableColumn fx:id="genreColumn" prefWidth="95.0" text="Genre" />
+                <TableColumn fx:id="priceColumn" prefWidth="50.0" text="Price" />
+                <TableColumn fx:id="stateColumn" prefWidth="95.0" text="State" />
+                <TableColumn fx:id="scoreColumn" prefWidth="38.0" text="Score" />
             </columns>
         </TableView>
     </children>
