--- a/app/src/main/resources/fxml/gameDatabase/game_database_view.fxml
+++ b/app/src/main/resources/fxml/gameDatabase/game_database_view.fxml
@@ -1,48 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.control.*?>
+
+<?import java.lang.*?>
 <?import javafx.collections.*?>
-<?import java.lang.String?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gameaffinity.view.GameDatabaseView">
+<AnchorPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gameaffinity.view.GameDatabaseView">
     <children>
         <!-- Database Panel -->
         <VBox alignment="TOP_CENTER" spacing="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.topAnchor="10">
-            <Label text="Available Games in Database:" style="-fx-font-size: 16px; -fx-font-weight: bold;" />
-            
+            <Label style="-fx-font-size: 16px; -fx-font-weight: bold;" text="Available Games in Database:" />
+
             <!-- Table to display the games -->
-            <TableView fx:id="databaseTable" prefHeight="300" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.topAnchor="40">
+            <TableView fx:id="databaseTable" prefHeight="300" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.topAnchor="40" focusTraversable="false">
                 <columns>
-                    <TableColumn fx:id="idColumn" text="ID" />
-                    <TableColumn fx:id="nameColumn" text="Name" />
-                    <TableColumn fx:id="genreColumn" text="Genre" />
-                    <TableColumn fx:id="priceColumn" text="Price" />
+                    <TableColumn fx:id="nameColumn" minWidth="300.0" text="Name" />
+                    <TableColumn fx:id="genreColumn" prefWidth="130.0" text="Genre" />
+                    <TableColumn fx:id="priceColumn" prefWidth="48.0" text="Price" />
                 </columns>
             </TableView>
+   
+           <!-- Add Game Button -->
+           <Button fx:id="addGameButton" prefHeight="25.0" prefWidth="480.0" text="Add to Library" />
+         <VBox alignment="TOP_CENTER" spacing="10" />
+         <HBox alignment="CENTER" prefHeight="26.0" prefWidth="480.0">
+            <children>
+                  <Label text="Search by Name:" />
+                  <TextField fx:id="searchField" />
+                  <Button fx:id="searchButton" text="Search" />
+            </children>
+         </HBox>
+         <HBox alignment="CENTER" prefHeight="26.0" prefWidth="480.0">
+            <children>
+
+                     <Label text="Search by Genre:" />
+                  <ComboBox fx:id="genreComboBox">
+                      <items>
+                          <FXCollections fx:factory="observableArrayList">
+                              <String fx:value="All" />
+                          </FXCollections>
+                      </items>
+                  </ComboBox>
+                  <Button fx:id="filterButton" text="Filter" />
+            </children>
+         </HBox>
         </VBox>
 
-        <!-- Search and Filter Panel -->
-        <GridPane alignment="CENTER" hgap="10" vgap="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.topAnchor="350">
-            <Label text="Search by Name:" />
-            <TextField fx:id="searchField" GridPane.columnIndex="1" />
-            <Button  fx:id="searchButton" text="Search" GridPane.columnIndex="2" />
-
-            <Label text="Search by Genre:" GridPane.rowIndex="1"/>
-            <ComboBox fx:id="genreComboBox" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                <items>
-                    <FXCollections fx:factory="observableArrayList">
-                        <String fx:value="All" />
-                    </FXCollections>
-                </items>
-            </ComboBox>
-            <Button fx:id="filterButton" text="Filter" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-        </GridPane>
-
-        <!-- Add Game Button -->
-        <Button fx:id="addGameButton" text="Add to Library" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.bottomAnchor="60" />
-
         <!-- Back Button -->
-        <Button fx:id="backButton" text="Back" AnchorPane.leftAnchor="10" AnchorPane.bottomAnchor="10" />
+        <Button fx:id="backButton" layoutX="230.0" layoutY="474.0" text="Back" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="230.0" />
     </children>
 </AnchorPane>
